# FlowerHubBackend

./: .env.example  Dockerfile  Taskfile.yml  compose.yml  flowers.db  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  admin.py  auth.py  flower.py  order.py  seller.py  user.py
app/core/: __init__.py  config.py  logger.py  security.py  token.py
app/crud/: __init__.py  flower.py  order.py  user.py
app/db/: __init__.py  database.py  redis.py
app/db/models/: __init__.py  address.py  flower.py  order.py  user.py
app/schemas/: __init__.py  address.py  flower.py  order.py  user.py
tests/: test_admin.py  test_auth.py  test_flower.py  test_order.py  test_seller.py  test_user.py
