[project]
name = "flowerhubbackend"
version = "0.1.0"
description = ""
authors = [
    {name = "NKTKLN",email = "nktkln@nktkln.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "jose (>=1.0.0,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "greenlet (>=3.2.2,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "asgi-lifespan (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
interrogate = "^1.7.0"
vulture = "^2.14"
pip-audit = "^2.9.0"
black = "^25.1.0"
coverage = "^7.8.0"
pytest-cov = "^6.1.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | tmp
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp"]

[tool.ruff.lint]
ignore = ["E203", "S105", "F401", "E501", "F811", "E402", "F841"]
select = ["E", "F", "W", "C90", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
strict_optional = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true
exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp"]

[tool.interrogate]
fail-under = 90
exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
verbose = 1
color = true

[tool.vulture]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp"]

